# ciw-tenders

./: .gitattributes  .gitignore  CLAUDE.md  README.md  justfile
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_embedding_input.py  0003_estimates.py  0004_estimate_match_snapshot.py  0005_estimate_review_axis.py  0006_benchmark.py  (+1 more)
backend/app/: main.py
backend/migrations/: 001_init.sql
backend/tests/: conftest.py  fakes.py  test_ai_instrumentation.py  test_anthropic_matcher.py  test_api.py  test_article_embedding_service.py  test_article_search.py  test_article_service.py  test_articles_routes.py  test_auth_routes.py  test_auth_service.py  test_auth_token.py  test_authz_matrix.py  test_benchmark_domain.py  test_benchmark_metrics.py  test_benchmark_reconstruct.py  test_benchmark_repository.py  test_benchmark_xlsx.py  test_celery_correlation.py  test_classification.py  test_config.py  test_config_match_top_k.py  test_decision_fund.py  test_decision_fund_repository.py  test_decision_fund_repository_integration.py  test_decision_fund_service.py  test_domain_auth.py  test_embedding_worker.py  test_estimate_detail_review.py  test_estimate_export.py  test_estimate_export_service.py  test_estimate_fund_methods.py  test_estimate_lock_integration.py  test_estimate_matching_service.py  test_estimate_models.py  test_estimate_parser.py  test_estimate_repo_cas.py  test_estimate_repository_fund_integration.py  test_estimate_repository_mapping.py  test_estimate_review.py  (+27 more)
(+191 files in other folders)
