[project]
name = "ciw-backend"
version = "0.1.0"
description = "Автоматизатор строительных смет — бэкенд (RAG: pgvector + Gemini + Anthropic)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.39.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.flake8-bugbear]
# Вызовы в дефолтах аргументов — штатный паттерн FastAPI (DI), не баг.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Form",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
